# MAC

./: .gitignore  .gitmodules  LICENSE.md  MAC_example.ipynb  MAC_tutorial.ipynb  README.md  Test.ipynb  example_colab.ipynb  example_local.ipynb  setup.cfg
agents/: agent.py  deep_policy_gradient.py  deep_q.py  policy_gradient.py
control/: controller.py  controller_centralized.py  controller_centralized_DQN.py  controller_centralized_RL.py  controller_decentralized.py  controller_decentralized_RL.py  controller_economic.py  controller_market.py  controls.py  decision_maker.py  economic_control.py  observation.py  utils.py
environments/: env_wrapper.py
environments/MultiTaxiEnv/: MultiTaxiWrapper.py  config.py  multi_taxi_wrapper.py  taxi_agents.py  taxi_environment.py  taxi_test.py
environments/cleanup/: cleanup_wrapper.py  example.py
environments/corners/: corners_agents.py  corners_env.py
mac/: __init__.py
mac/agents/: __init__.py  agent.py
mac/control/: __init__.py  controller.py  controller_centralized.py  controller_decentralized.py
mac/environments/: __init__.py  env_wrapper.py
mac_utils/: random_agent.py
src/agents/: agent.py  deep_policy_gradient.py  random_agent.py
src/control/: controller.py  controller_centralized.py  evaluate.py  (+3 more)
temp/: controller_centralized_RL.py  controller_economic.py  deep_q.py  evaluate.py  example_colab.ipynb  example_local.ipynb  policy_gradient.py
tests/: dpg_test.py  dqn_test.py  economic_test.py  evaluate.py  particle_test.py  pg_test.py  random_test.py  taxi_test.py
utils/: random_agent.py
(+15 files in other folders)
