[metadata]
name = multi-agent-control
version = 0.0.2
author = Boaz Bibi
description = A framework for multi agent control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarah-keren/MAC
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
